tests/paczka1/fuzzy1/62259542.err
Error in line 7: S842 A269 17,1
Error in line 10: uo8dl9sCyhG S842 31,1
Error in line 12: ctbmthK A271 83,4
Error in line 14: uo8dl9sCyhG A74 62,3
Error in line 22: LaeQYbMPBpq A271 28,2
Error in line 35: LaeQYbMPBpq A271 -1,7
